Adding Course description

--- a/index.html
+++ b/index.html
@@ -3,30 +3,24 @@ layout: default
 title: PLEX 
 ---
 <div id="Home" class="container-fluid">
-    <div class="col-md-8 hidden-sm hidden-xs firstcarousel">
-        <div id="myCarousel" class="carousel slide bordercarousel" data-interval="3000" data-ride="carousel">
-            <div class="carousel-inner inner">
-                <div class="item slidesize active">
-                    <img id="slide" alt="bienvenida" src="/assets/backgrounds/plex.png">
-                </div>
-                <div class="item slidesize">
-                    <img id="slide" alt="graduacion" src="/assets/img/graduation.jpeg">
-                </div>
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                                    <span class="glyphicon glyphicon-chevron-left"></span>
-                                </a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                                    <span class="glyphicon glyphicon-chevron-right"></span>
-                                </a>
-            </div>
+    <div class="col-md-8">
+        <div class="about border">
+            <h1>Programa de Lengua Extranjera(PLEX)</h1>
+            <p> Curso de inglés con el objetivo de hablar, escuchar, leer y escribir en inglés,
+                obteniendo las bases del idioma para lograr una comunicación exitosa en un contexto cotidiano.<br>
+                El programa consta de 4 bloques, cada uno conformado por 3 niveles. Al cabo de los 12 niveles, el
+                objetivo a alcanzar es B1+ (según MCER), lo cual significa obtener un nivel
+                intermedio-avanzado. La certificación del idioma es por parte de CUCEA. </p>
         </div>
+    </div>
+    <div class="col-md-4">
+        <img src="/assets/backgrounds/plex.png">
     </div>
 </div>
 <hr>
 <div id="AboutUs" class="container-fluid">
     <div class="col-md-12">
         <h1>¿Quienes somos?</h1>
-        <p>--descripción--</p>
     </div>
     <div class="col-md-4">
         <div class="about border">
