--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
----
+--- 
 layout: default
 title: PLEX 
 ---
 <div id="Home" class="container-fluid">
     <div class="col-md-8">
-        <div class="about border">
-            <h1>Programa de Lengua Extranjera(PLEX)</h1>
-            <p> Curso de inglés con el objetivo de hablar, escuchar, leer y escribir en inglés,
-                obteniendo las bases del idioma para lograr una comunicación exitosa en un contexto cotidiano.<br>
-                El programa consta de 4 bloques, cada uno conformado por 3 niveles. Al cabo de los 12 niveles, el
-                objetivo a alcanzar es B1+ (según MCER), lo cual significa obtener un nivel
-                intermedio-avanzado. La certificación del idioma es por parte de CUCEA. </p>
-        </div>
+        <img src="/assets/backgrounds/plex.png">
     </div>
     <div class="col-md-4">
-        <img src="/assets/backgrounds/plex.png">
+        <div class="about border">
+            <h1>Programa de Lengua Extranjera(PLEX)</h1>
+            <p> Curso de inglés con el objetivo de hablar, escuchar, leer y escribir en inglés, obteniendo las bases del idioma
+                para lograr una comunicación exitosa en un contexto cotidiano.<br> El programa consta de 4 bloques, cada
+                uno conformado por 3 niveles. Al cabo de los 12 niveles, el objetivo a alcanzar es B1+ (según MCER), lo cual
+                significa obtener un nivel intermedio-avanzado. La certificación del idioma es por parte de CUCEA. </p>
+        </div>
     </div>
 </div>
 <hr>
@@ -128,28 +127,28 @@ title: PLEX
     </div>
     <div class="col-md-8 wood">
         <h3>Formulario para primer nivel</h3>
-    <form class="form-horizontal" action="https://formspree.io/plexprepa10@gmail.com" method="POST">
-        <fieldset>
-            <div class="form-group">
-                <label class="col-md-4 control-label" for="nombre"></label>
-                <div class="col-md-6">
-                    <input id="nombre" name="Nombre" type="text" placeholder="Nombre(s)" class="form-control input-md" required="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-4 control-label" for="apellidos"></label>
-                <div class="col-md-6">
-                    <input id="apellidos" name="Apellidos" type="text" placeholder="Apellidos" class="form-control input-md" required="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-4 control-label" for="email"></label>
-                <div class="col-md-6">
-                    <input id="email" name="email" type="text" placeholder="Correo Electronico" class="form-control input-md" required="">
-                </div>
-            </div>
+        <form class="form-horizontal" action="https://formspree.io/plexprepa10@gmail.com" method="POST">
+            <fieldset>
                 <div class="form-group">
-                <label class="col-md-4 control-label" for="Carrera">Carrera</label>
+                    <label class="col-md-4 control-label" for="nombre"></label>
+                    <div class="col-md-6">
+                        <input id="nombre" name="Nombre" type="text" placeholder="Nombre(s)" class="form-control input-md" required="">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="apellidos"></label>
+                    <div class="col-md-6">
+                        <input id="apellidos" name="Apellidos" type="text" placeholder="Apellidos" class="form-control input-md" required="">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="email"></label>
+                    <div class="col-md-6">
+                        <input id="email" name="email" type="text" placeholder="Correo Electronico" class="form-control input-md" required="">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="Carrera">Carrera</label>
                     <div class="col-md-4">
                         <select id="Carrera" name="Carrera" class="form-control">
                         <option value="BGC">Bachillerato General</option>
@@ -157,10 +156,10 @@ title: PLEX
                         </select>
                     </div>
                 </div>
-            <div class="form-group">
-                <label class="col-md-4 control-label" for="Semestre">Semestre</label>
-                <div class="col-md-4">
-                    <select id="Semestre" name="Semestre" class="form-control">
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="Semestre">Semestre</label>
+                    <div class="col-md-4">
+                        <select id="Semestre" name="Semestre" class="form-control">
                     <option value="1">Primero</option>
                     <option value="2">Segundo</option>
                     <option value="3">Tercero</option>
@@ -170,16 +169,16 @@ title: PLEX
                     <option value="7">Séptimo</option>
                     <option value="8">Octavo</option>
                     </select>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-4 control-label" for=""></label>
-                <div class="col-md-4">
-                    <button id="submit" class="btn btn-info">Registrarme</button>
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for=""></label>
+                    <div class="col-md-4">
+                        <button id="submit" class="btn btn-info">Registrarme</button>
+                    </div>
                 </div>
-            </div>
-        </fieldset>
-    </form>
+            </fieldset>
+        </form>
     </div>
 </div>
 <div id="ContactUs" class="container-fluid">
