--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: PLEX
 ---
 <div id="Home" class="container-fluid">
     <div class="col-md-8">
-        <img src="/assets/backgrounds/plex.png">
+        <img src="/assets/backgrounds/plex2.png">
     </div>
     <div class="col-md-4">
         <div class="about border">
@@ -17,7 +17,7 @@ title: PLEX
     </div>
 </div>
 <hr>
-<div id="AboutUs" class="container-fluid">
+<div id="AboutUs" class="container-fluid block">
     <div class="col-md-12">
         <h1>¿Quienes somos?</h1>
     </div>
@@ -46,7 +46,7 @@ title: PLEX
         </div>
     </div>
 </div>
-<div id="Levels" class="container-fluid">
+<div id="Levels" class="container-fluid block">
     <h1>Niveles</h1>
     <div class="col-md-12">
         <p>
@@ -63,7 +63,7 @@ title: PLEX
         </div>
     </div>
     <div class="col-md-6">
-        <div class="about border blockp">
+        <div class="about border">
             <h4>Bloque Morado</h4>
             <p>
                 Descripcion
@@ -72,7 +72,7 @@ title: PLEX
         </div>
     </div>
     <div class="col-md-6">
-        <div class="about border blockg">
+        <div class="about border">
             <h4>Bloque Verde</h4>
             <p>
                 Descripcion
@@ -81,7 +81,7 @@ title: PLEX
         </div>
     </div>
     <div class="col-md-6">
-        <div class="about border blockr">
+        <div class="about border">
             <h4>Bloque Café</h4>
             <p>
                 Descripcion
@@ -90,42 +90,42 @@ title: PLEX
         </div>
     </div>
 </div>
-<div id="Blue" class="container-fluid">
+<div id="Blue" class="container-fluid block">
     <h1>Bloque Azúl</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
-<div id="Purple" class="container-fluid">
+<div id="Purple" class="container-fluid block">
     <h1>Bloque Morado</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
-<div id="Green" class="container-fluid">
+<div id="Green" class="container-fluid block">
     <h1>Bloque Verde</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
-<div id="Brown" class="container-fluid">
+<div id="Brown" class="container-fluid block">
     <h1>Bloque Café</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
-<div id="Inscription" class="container-fluid">
+<div id="Inscription" class="container-fluid block">
     <h1>Inscripción</h1>
     <div class="col-md-4">
         <p>
             Texto
         </p>
     </div>
-    <div class="col-md-8 wood">
+    <div class="col-md-8">
         <h3>Formulario para primer nivel</h3>
         <form class="form-horizontal" action="https://formspree.io/plexprepa10@gmail.com" method="POST">
             <fieldset>
@@ -181,7 +181,7 @@ title: PLEX
         </form>
     </div>
 </div>
-<div id="ContactUs" class="container-fluid">
+<div id="ContactUs" class="container-fluid block">
     <h1>Contacto</h1>
     <div class="row">
         <div class="col-md-4" <div id="fb-root"></div>
