--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ title: PLEX
     </div>
 </div>
 <div id="Levels" class="container-fluid block">
-    <h1>Niveles</h1>
+    <h1>Bloques</h1>
     <div class="col-md-12">
         <p>
             Descripción del Programa
@@ -55,64 +55,64 @@ title: PLEX
     </div>
     <div class="col-md-6">
         <div class="about border blockb">
-            <h4>Bloque Azúl</h4>
+            <h4>Inicial - A1</h4>
             <p>
                 Descripcion
             </p>
-            <a href="#Blue" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+            <a href="#A1"><span class="glyphicon glyphicon-info-sign"></span></a>
         </div>
     </div>
     <div class="col-md-6">
         <div class="about border">
-            <h4>Bloque Morado</h4>
+            <h4>Intermedio - A2</h4>
             <p>
                 Descripcion
             </p>
-            <a href="#Purple" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+            <a href="#A2"><span class="glyphicon glyphicon-info-sign"></span></a>
         </div>
     </div>
     <div class="col-md-6">
         <div class="about border">
-            <h4>Bloque Verde</h4>
+            <h4>Intermedio Avanzado - B1</h4>
             <p>
                 Descripcion
             </p>
-            <a href="#Green" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+            <a href="#B1"><span class="glyphicon glyphicon-info-sign"></span></a>
         </div>
     </div>
     <div class="col-md-6">
         <div class="about border">
-            <h4>Bloque Café</h4>
+            <h4>Avanzado - B2</h4>
             <p>
                 Descripcion
             </p>
-            <a href="#Brown" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+            <a href="#B2"><span class="glyphicon glyphicon-info-sign"></span></a>
         </div>
     </div>
 </div>
-<div id="Blue" class="container-fluid block">
-    <h1>Bloque Azúl</h1>
+<div id="A1" class="container-fluid block">
+    <h1>Inicial, nivel(1,2,3)</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
-<div id="Purple" class="container-fluid block">
-    <h1>Bloque Morado</h1>
+<div id="A2" class="container-fluid block">
+    <h1>Intermedio, nivel(4,5,6)</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
-<div id="Green" class="container-fluid block">
-    <h1>Bloque Verde</h1>
+<div id="B1" class="container-fluid block">
+    <h1>Intermedio Avanzado, nivel(7,8,9)</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
-<div id="Brown" class="container-fluid block">
-    <h1>Bloque Café</h1>
+<div id="B2" class="container-fluid block">
+    <h1>Avanzado, nivel (10,11,12)</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
