--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ title: PLEX
     </div>
     <div class="col-md-6">
         <div class="about border blockb">
-            <h4>Inicial - A1</h4>
+            <h4>Basico - A1</h4>
             <p>
                 Descripcion
             </p>
@@ -91,28 +91,28 @@ title: PLEX
     </div>
 </div>
 <div id="A1" class="container-fluid block">
-    <h1>Inicial, nivel(1,2,3)</h1>
+    <h1>Basico</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
 <div id="A2" class="container-fluid block">
-    <h1>Intermedio, nivel(4,5,6)</h1>
+    <h1>Intermedio</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
 <div id="B1" class="container-fluid block">
-    <h1>Intermedio Avanzado, nivel(7,8,9)</h1>
+    <h1>Intermedio Avanzado</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
 <div id="B2" class="container-fluid block">
-    <h1>Avanzado, nivel (10,11,12)</h1>
+    <h1>Avanzado</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
